# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2014-08-19 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update the CloudI Service API to provide the following logging functions:
        * cloudi_service_api:logging_file_set/2
        * cloudi_service_api:logging_level_set/2
        * cloudi_service_api:logging_syslog_set/2
        * cloudi_service_api:logging_formatters_set/2
        * cloudi_service_api:logging_redirect_set/2
    * Deprecated the CloudI Service API functions:
        * cloudi_service_api:loglevel_set/2
        * cloudi_service_api:log_redirect/2

2014-08-18 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fixes to log formatters to allow multiple instances of the same
      output module
    * Add the cloudi_service_api:log_formatters/2 function to the
      CloudI Service API

2014-08-15 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add lager backend integration

2014-08-14 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add lager formatter integration

2014-08-13 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix cloudi_service_http_cowboy websocket_connect_sync race condition
    * Update key2value
    * Add keys1value dependency

2014-08-12 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the service configuration option request_name_lookup to provide a way
      to change service name lookup failure behavior
      (usable as cloudi module context configuration too)
    * Switch to using the new endpoints in cloudi_service_api_requests

2014-08-11 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update cowboy, cowlib, and ranch so it is at 1.0
    * cloudi_service_http_cowboy changes:
        * Add timeout and length limits due to cowboy configuration additions
        * Change multipart support to utilize the new
          multipart_destination_lock service argument (defaults to true)